[project]
name = "lift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.118.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
worker = "app.cli:worker"

[tool.uv]
package = true
